--- a/rnn-apis/requirements.txt
+++ b/rnn-apis/requirements.txt
@@ -1,8 +1,8 @@
+python==3.8.13
 Flask==2.0.3
 librosa==0.9.2
 numpy==1.22.3
 pandas==1.4.3
 requests==2.28.1
 scikit_learn==1.1.2
-tensorflow-cpu==2.6.0
-python==3.8.13
+tensorflow==2.6.0
